--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
+                <h4>Teléfono:</h4>
                 <p>+52 477 471 4244</p>
               </div>
               
